secondfile/objects/Blog__c.object
<CustomObject>
    <fields>
        <fullName>Author__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Author</label>
        <referenceTo>Author__c</referenceTo>
        <relationshipLabel>Blogs</relationshipLabel>
        <relationshipName>Blogs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Banner_Link_Formula__c</fullName>
        <formula>Banner_Link__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Banner Link Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Banner_Link__c</fullName>
        <label>Banner Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Banner_Picture__c</fullName>
        <formula>IMAGE( Banner_Link__c, &quot;Banner Image&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Banner Picture</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Blog_Image_Link__c</fullName>
        <label>Blog Image Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Blog_Picture__c</fullName>
        <formula>IMAGE(Blog_Image_Link__c , &quot;Blog Image&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Blog Picture</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Blog_Status__c</fullName>
        <label>Blog Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Blog_Summary_Full__c</fullName>
        <label>Blog Summary – Full</label>
        <length>1000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Blog_Summary_Short__c</fullName>
        <label>Blog Summary – Short</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Featured_Blog__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Featured Blog</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Primary_Topic__c</fullName>
        <label>Primary Topic</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Mobility Transformations</fullName>
                </value>
                <value>
                    <fullName>Mobility</fullName>
                </value>
                <value>
                    <fullName>Topic3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Blog</label>
    <nameField>
        <label>Blog Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Blogs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Blog_Active_Validation</fullName>
        <active>true</active>
        <description>Checking all the Required Fields To make the Blog Active.</description>
        <errorConditionFormula>AND(
ISPICKVAL(Blog_Status__c, &quot;Active&quot;),

OR(
  Name=NULL,
  Blog_Summary_Short__c =NULL,
  Banner_Link__c =NULL
)

)</errorConditionFormula>
        <errorMessage>Blog name, Blog Summary and Banner are required to activate a Blog in Newsroom.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Blog_Feature_Validation</fullName>
        <active>true</active>
        <description>Checking all the Required Fields To make the Blog Active.</description>
        <errorConditionFormula>AND(
 Featured_Blog__c,
 Blog_Image_Link__c=NULL
)</errorConditionFormula>
        <errorMessage>Please upload an Blog image to mark the Blog as Featured</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Blog_Management_Rights</fullName>
        <active>true</active>
        <errorConditionFormula>NOT( $User.Blog_Manager__c ) &amp;&amp; $Profile.Name &lt;&gt; &quot;System Administrator&quot;</errorConditionFormula>
        <errorMessage>You are not authorized to create or modify Blogs.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Blog_Name_Validation</fullName>
        <active>true</active>
        <description>Blog_Name_Validation</description>
        <errorConditionFormula>IF(LEN(Name)&gt;30,true,false)</errorConditionFormula>
        <errorDisplayField>Name</errorDisplayField>
        <errorMessage>Please Enter Blog Name Less than 30 Characters.</errorMessage>
    </validationRules>
</CustomObject>